feat：新增真流式和幂等触发
